# aI-advent-challenge

./: .gitignore  LICENSE  README.md  REFACTORING_NOTES.md  config.py  console_chat.py  main.py  pyproject.toml  requirements-mcp.txt  requirements.txt
app/: __init__.py  agent.py  bot.py  bot_temperature.py  gigachat_client.py  main.py
bots/hf_demo/: __init__.py  bot.py  handlers.py
bots/literary/: __init__.py  bot.py  handlers.py
bots/real_estate/: __init__.py  bot.py  handlers.py
cli/: gigachat_mcp_cli.py  hf_cli.py  hf_llama3_openai.py
cli/history chat/: config.py  console_chat.py  memory.py
mcp_filesystem_sandbox/: __init__.py  security.py  server.py
mobileautomation/: .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
mobileautomation/avd_mcp/: __init__.py  server.py
mobileautomation/scripts/: run_mcp.sh
mobileautomation/src/mcp_orchestrator/: __init__.py  adb_ctl.py  docker_ctl.py  server.py  types.py
rag_search/: README.md  pyproject.toml
rag_search/rag/: __init__.py  __main__.py  agent.py  chunking.py  cli.py  index_faiss.py  ollama_client.py  ollama_embed.py  youtube.py
rag_search/tests/: test_filtering_mock.py
reminder/: .env.example  Makefile  README.md  docker-compose.yml  pyproject.toml
reminder/console_agent/: Dockerfile  __init__.py  app.py  gigachat_summary.py  ui.py
reminder/mcp_scheduler_server/: Dockerfile  __init__.py  app.py  models.py  storage.py
services/: gigachat_client.py  token_counter.py
services/gigachat/: __init__.py  client.py  config.py
services/huggingface/: __init__.py  client.py  config.py
tests/: test_hf_llama3_openai.py  test_security.py
weather_mcp/: __init__.py  server.py
weather_mcp_cli/: __init__.py  agent.py  main.py
websearch/: .env.example  README.md  cursor.json  docker-compose.yml  requirements.txt
websearch/mcp/desktop-commander-http/: Dockerfile  app.py  pyproject.toml
websearch/mcp/gigachat-summary/: Dockerfile  app.py  pyproject.toml  server.py
websearch/tui/: Dockerfile  pyproject.toml
websearch/tui/websearch_tui/: app.py
websearch/tui/websearch_tui/clients/: __init__.py  brave.py  desktop_commander.py  gigachat_summary.py  mcp_http.py  mcp_stdio.py  types.py
