[project]
name = "mcp-filesystem-sandbox"
version = "0.1.0"
description = "MCP stdio server that exposes safe filesystem tools limited to allowed directories."
readme = "README.md"
requires-python = ">=3.9"
authors = [{ name = "Filesystem Sandbox", email = "sandbox@example.com" }]
dependencies = [
    "mcp>=1.0.0",
]

[project.optional-dependencies]
dev = ["pytest>=7.4"]

[project.scripts]
mcp-filesystem-sandbox = "mcp_filesystem_sandbox.server:main"

[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

