[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "mcp-orchestrator"
version = "0.1.0"
description = "Android emulator orchestration MCP server for Cursor"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "mcp>=0.1.2",
]
authors = [
    { name = "Mobile Automation Orchestrator" },
]

[project.scripts]
mcp-orchestrator = "mcp_orchestrator.server:main"

[tool.setuptools]
package-dir = {"" = "src"}
packages = ["mcp_orchestrator"]


