[project]
name = "local-rag-indexer"
version = "0.1.0"
description = "Local RAG indexer using FAISS and Ollama embeddings"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
  "faiss-cpu",
  "numpy",
  "requests",
  "tqdm",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["rag"]

