[project]
name = "websearch-tui"
version = "0.1.0"
description = "Textual TUI для поиска через MCP Brave и саммари через GigaChat MCP"
requires-python = ">=3.11"
dependencies = [
  "textual>=0.58.0",
  "httpx>=0.27.0",
  "python-dotenv>=1.0.1",
]

[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"
