[project]
name = "desktop-commander-http"
version = "0.1.0"
description = "Minimal HTTP MCP server for filesystem ops"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115.0",
  "uvicorn>=0.30.0",
]

[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"
